; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/cadence/extr_macb_main.c_gem_alloc_rx_buffers.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/cadence/extr_macb_main.c_gem_alloc_rx_buffers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.macb = type { i32, i32, i32, %struct.macb_queue* }
%struct.macb_queue = type { i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"Allocated %d RX struct sk_buff entries at %p\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.macb*)* @gem_alloc_rx_buffers to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gem_alloc_rx_buffers(%struct.macb* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.macb*, align 8
  %4 = alloca %struct.macb_queue*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.macb* %0, %struct.macb** %3, align 8
  store i32 0, i32* %5, align 4
  %7 = load %struct.macb*, %struct.macb** %3, align 8
  %8 = getelementptr inbounds %struct.macb, %struct.macb* %7, i32 0, i32 3
  %9 = load %struct.macb_queue*, %struct.macb_queue** %8, align 8
  store %struct.macb_queue* %9, %struct.macb_queue** %4, align 8
  br label %10

10:                                               ; preds = %47, %1
  %11 = load i32, i32* %5, align 4
  %12 = load %struct.macb*, %struct.macb** %3, align 8
  %13 = getelementptr inbounds %struct.macb, %struct.macb* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = icmp ult i32 %11, %14
  br i1 %15, label %16, label %52

16:                                               ; preds = %10
  %17 = load %struct.macb*, %struct.macb** %3, align 8
  %18 = getelementptr inbounds %struct.macb, %struct.macb* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = sext i32 %19 to i64
  %21 = mul i64 %20, 8
  %22 = trunc i64 %21 to i32
  store i32 %22, i32* %6, align 4
  %23 = load i32, i32* %6, align 4
  %24 = load i32, i32* @GFP_KERNEL, align 4
  %25 = call i32 @kzalloc(i32 %23, i32 %24)
  %26 = load %struct.macb_queue*, %struct.macb_queue** %4, align 8
  %27 = getelementptr inbounds %struct.macb_queue, %struct.macb_queue* %26, i32 0, i32 0
  store i32 %25, i32* %27, align 4
  %28 = load %struct.macb_queue*, %struct.macb_queue** %4, align 8
  %29 = getelementptr inbounds %struct.macb_queue, %struct.macb_queue* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %35, label %32

32:                                               ; preds = %16
  %33 = load i32, i32* @ENOMEM, align 4
  %34 = sub nsw i32 0, %33
  store i32 %34, i32* %2, align 4
  br label %53

35:                                               ; preds = %16
  %36 = load %struct.macb*, %struct.macb** %3, align 8
  %37 = getelementptr inbounds %struct.macb, %struct.macb* %36, i32 0, i32 2
  %38 = load i32, i32* %37, align 8
  %39 = load %struct.macb*, %struct.macb** %3, align 8
  %40 = getelementptr inbounds %struct.macb, %struct.macb* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 4
  %42 = load %struct.macb_queue*, %struct.macb_queue** %4, align 8
  %43 = getelementptr inbounds %struct.macb_queue, %struct.macb_queue* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = call i32 @netdev_dbg(i32 %38, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0), i32 %41, i32 %44)
  br label %46

46:                                               ; preds = %35
  br label %47

47:                                               ; preds = %46
  %48 = load i32, i32* %5, align 4
  %49 = add i32 %48, 1
  store i32 %49, i32* %5, align 4
  %50 = load %struct.macb_queue*, %struct.macb_queue** %4, align 8
  %51 = getelementptr inbounds %struct.macb_queue, %struct.macb_queue* %50, i32 1
  store %struct.macb_queue* %51, %struct.macb_queue** %4, align 8
  br label %10

52:                                               ; preds = %10
  store i32 0, i32* %2, align 4
  br label %53

53:                                               ; preds = %52, %32
  %54 = load i32, i32* %2, align 4
  ret i32 %54
}

declare dso_local i32 @kzalloc(i32, i32) #1

declare dso_local i32 @netdev_dbg(i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
